polyglot-demo/kube/emp-service.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: emp-service
  name: emp-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: emp-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: emp-service
    spec:
      containers:
      - image: emp-service:v1
        imagePullPolicy: IfNotPresent
        name: emp-service
        ports:
        - containerPort: 8080
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: emp-service
  name: emp-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: emp-service
  sessionAffinity: None
  type: ClusterIP
