polyglot-demo/kube/hr-service.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: hr-service
  name: hr-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: hr-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: hr-service
    spec:
      containers:
      - image: hr-service:v1
        imagePullPolicy: IfNotPresent
        name: hr-service
        ports:
        - containerPort: 9090
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: hr-service
  name: hr-service
  namespace: default
spec:
  ports:
  - port: 9090
    protocol: TCP
    nodePort: 30002
  selector:
    run: hr-service
  sessionAffinity: None
  type: NodePort
