polyglot-demo/kube/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /hr
        backend:
          serviceName: hr-service
          servicePort: 9090
